---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Find new demolishers through their created trigger
    - Start tracking (read: guessing) demolisher territories
    - Demolishers can apparently despawn, wipe their data when they do
    - Visualize the territories on vulcanus
    - Add command to see the debug objects with
    - Turn the debug command into a toggle
    - Prefix command response with [demolisher-compass]
    - Grab the compass textures
    - Load the compass sprite into items
    - Spawn the demolisher compass via a shortcut
    - Try to get the compass to point where it is supposed to
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 10. 30
  Info:
    - Initial commit